Drawing a triangle -> Setup

--- a/vulkan-renderer/vulkan-renderer.vcxproj.filters
+++ b/vulkan-renderer/vulkan-renderer.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="queue_family.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="application.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="queue_family.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
