Drawing a triangle -> Presentation

--- a/vulkan-renderer/vulkan-renderer.vcxproj
+++ b/vulkan-renderer/vulkan-renderer.vcxproj
@@ -146,10 +146,12 @@
     <ClCompile Include="application.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="queue_family.cpp" />
+    <ClCompile Include="swap_chain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="application.h" />
     <ClInclude Include="queue_family.h" />
+    <ClInclude Include="swap_chain.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
