--- a/vulkan-renderer/vulkan-renderer.vcxproj.filters
+++ b/vulkan-renderer/vulkan-renderer.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="queue_family.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="swap_chain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="application.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="queue_family.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="swap_chain.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
